--- a/src/driver/Makefile
+++ b/src/driver/Makefile
@@ -1,2 +1,9 @@
-obj-m := secbulk.o
-secbulk-m := secbulk.o
+CURRENT_PATH:=$(shell pwd)
+LINUX_KERNEL_PATH:=/lib/modules/$(shell uname -r)/build
+
+all:
+		$(MAKE) -C $(LINUX_KERNEL_PATH) M=$(CURRENT_PATH) modules
+clean:   
+		rm -rf .*.cmd *.o *.mod.c *.ko .tmp_versions
+         
+obj-m += secbulk.o
